# NativeConsole

./: .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  ManagedConsole.csproj  Program.cs  README.md  console.cpp  console.h  setup.sh
interop/: CMakeLists.txt  interop.i
interop/csharp/: CMakeLists.txt
lib/: CMakeLists.txt  utils.cpp  utils.h
